--- a/weather_project/meteo_app/templates/meteo_app/auth.html
+++ b/weather_project/meteo_app/templates/meteo_app/auth.html
@@ -44,8 +44,10 @@
                 <div class="col-6">
                     <p><a class="btn btn-outline-primary" href="meteo-data" role="button">Данные с метеостанции</a></p>
                     <p><a class="btn btn-outline-primary" href="wind-data" role="button" aria-describedby="authInfo">Данные с ветряного модуля</a> </p>
+                    <p><a class="btn btn-outline-primary" href="invertor-data" role="button" aria-describedby="authInfo">Данные с инвертора</a> </p>
                     <div id="authInfo" class="form-text">Без авторизации не доступны скачивание или фильтрация данных</div>
                 </div>
             </div>
         </div>
     </body>
+</html>
