--- a/weather_project/meteo_app/templates/meteo_app/main.html
+++ b/weather_project/meteo_app/templates/meteo_app/main.html
@@ -8,6 +8,7 @@
                 <br>
                 <p><a class="btn btn-outline-primary" href="meteo-data" role="button">Данные с метеостанции</a></p>
                 <p><a class="btn btn-outline-primary" href="wind-data" role="button">Данные с ветряного модуля</a></p>
+                <p><a class="btn btn-outline-primary" href="invertor-data" role="button">Данные с инвертора</a></p>
             </div>
         </div>
     </div>
