--- a/weather_project/meteo_app/templates/meteo_app/invertor.html
+++ b/weather_project/meteo_app/templates/meteo_app/invertor.html
@@ -29,7 +29,20 @@
               </form>
             {% endif %}
               <br>
-                <table class="table table-hover table-bordered">
+                  <nav aria-label="Page navigation example">
+                     <ul class="pagination">
+                            {% if page_obj.has_previous %}
+                                <li class="page_item"><a class="page-link" href="?page=1">&laquo; first</a></li>
+                                <li class="page_item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">previous</a></li>
+                            {% endif %}
+                            <li class="page_item"><a class="page-link" style="color:black">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a></li>
+                            {% if page_obj.has_next %}
+                                <li class="page_item"> <a class="page-link" href="?page={{ page_obj.next_page_number }}">next</a> </li>
+                                <li class="page_item"> <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a></li>
+                            {% endif %}
+                    </ul>
+                  </nav>
+                <table class="table table-hover table-bordered table-condensed">
                     <tbody>
                       <tr>
                         <th scope="col">id</th>
@@ -47,7 +60,7 @@
                         <th scope="col">energy_today(кВт*ч)</th>
                         <th scope="col">energy_total(кВт*ч)</th>
                       </tr>
-                    {% for data in dataset %}
+                    {% for data in page_obj %}
                       <tr>
                         <td scope="col">{{ data.id }}</td>
                         <td scope="col">{{ data.date|date:"d.m.Y H:i:s" }}</td>
