--- a/weather_project/meteo_app/templates/meteo_app/auth.html
+++ b/weather_project/meteo_app/templates/meteo_app/auth.html
@@ -34,6 +34,7 @@
                                 <input type="password" class="form-control" id="password-field" name='password'>
                             </div>
                                 <button type="submit" class="btn btn-outline-primary">Войти</button>
+                                <a class="btn btn-outline-secondary" href="{% url 'reg-page' %}"role="button">Регистрация</a>
                             </form>
                     </form>
                 </div>
