--- a/weather_project/meteo_app/templates/meteo_app/base.html
+++ b/weather_project/meteo_app/templates/meteo_app/base.html
@@ -30,6 +30,7 @@
                     <br>
                     <p> 
                         <a class="btn btn-outline-secondary" href="{% url 'auth-page' %}"role="button">Войти</a>
+                        <a class="btn btn-outline-secondary" href="{% url 'reg-page' %}"role="button">Регистрация</a>
                     </p>
                 </div>
             </div>
