--- a/weather_project/meteo_app/templates/meteo_app/invertor.html
+++ b/weather_project/meteo_app/templates/meteo_app/invertor.html
@@ -15,7 +15,7 @@
                       {{ message }}
                   </div>
                 {% endif %}
-              <form class="row g-3" action="{% url 'meteo-data' %}" method="get">
+              <form class="row g-3" action="{% url 'invertor-data' %}" method="get">
                 <div class="col-auto">
                   <input type="text" class="form-control" placeholder="Дата с:"name="date_from">
                 </div>
