--- a/weather_project/meteo_app/templates/meteo_app/auth.html
+++ b/weather_project/meteo_app/templates/meteo_app/auth.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="" rel="">
         {% block title %}
             <title>Данные о погоде</title>
         {% endblock %}
@@ -50,5 +51,13 @@
                 </div>
             </div>
         </div>
+    <div class="container navbar-fixed-bottom ">
+    <div class="navbar-inner">
+        <footer class=" modal-footer col-12 bg-white">
+                <p style="font-size: 0.7rem">Красавина Дарья</p><br>
+                <p style="font-size: 0.7rem">2022</p>
+        </footer>
+    </div>
+</div>
     </body>
 </html>
