--- a/weather_project/meteo_app/templates/meteo_app/invertor.html
+++ b/weather_project/meteo_app/templates/meteo_app/invertor.html
@@ -8,6 +8,7 @@
               <p>
                   <a class="btn btn-outline-success" href="{% url 'download-invertor-data' %}" role="button">Скачать .csv</a>
                   <a class="btn btn-outline-success" href="{% url 'download-invertor-data-xlsx' %}" role="button">Скачать .xlsx</a>
+                  <a class="btn btn-outline-success" href="{% url 'invertor-data-graph' %}" role="button">График</a>
               </p>
               <div class="col-6">
                 {% if message %}
