--- a/weather_project/meteo_app/templates/meteo_app/invertor_graph.html
+++ b/weather_project/meteo_app/templates/meteo_app/invertor_graph.html
@@ -23,7 +23,7 @@
         </form>
         <br>
         <p>
-            <a class="btn btn-outline-secondary" href="{% url 'meteo-data' %}"role="button">Вернуться </a>
+            <a class="btn btn-outline-secondary" href="{% url 'invertor-data' %}"role="button">Вернуться </a>
         </p>
         <img src="{% static 'media/1.jpeg' %}" alt="my_image">
     </div>
