graph and info added

--- a/weather_project/meteo_app/templates/meteo_app/invertor_graph.html
+++ b/weather_project/meteo_app/templates/meteo_app/invertor_graph.html
@@ -5,7 +5,10 @@
 {% block content %}
 <div class="container">
     <div class="col-12">
-        <form class="row g-3" action="{% url 'meteo-data-graph' %}" method="get">
+        <form class="row g-3" action="{% url 'invertor-data-graph' %}" method="get">
+            <br>
+            <div id="dateInlineHelp" class="form-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
+            <div id="paramInlineHelp" class="form-text">Введите параметр из таблицы</div>
             <div class="col-auto">
               <input type="text" class="form-control" placeholder="Дата с:"name="date_from">
             </div>
@@ -14,18 +17,42 @@
             </div>
             <div class="col-auto">
                 <input type="text" class="form-control" placeholder="Параметр" name="param" aria-describedby="paramInlineHelp">
+            </div>
+            <div class="col-auto">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="1" name="seconds" id="flexCheckChecked" unchecked>
+                <label class="form-check-label" for="flexCheckChecked">
+                  Отобразить посекундно
+                </label>
               </div>
+            </div>
             <div class="col-auto">
               <button type="submit" class="btn btn-outline-secondary mb-3">Построить график</button>
             </div>
-            <div id="dateInlineHelp" class="form-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
-            <div id="paramInlineHelp" class="form-text">Введите параметр из таблицы</div>
+            <div id="windInlineHelp" class="form-text col-auto text-nowrap bg-light border" style="width: 26rem;">
+                <div>Вы можете построить графики по следующим параметрам:</div>
+                <div>pv1_input_power - Входная мощность pv1 (Вт) за 1 сек</div>
+                <div>pv1_voltage - Напряжение pv1 (В) за 1 сек</div>
+                <div>pv1_current - Ток pv1 (А) за 1 сек</div>
+                <div>pv2_input_power - Входная мощность pv2 (Вт) за 1 сек</div>
+                <div>pv2_voltage - Напряжение pv2 (В) за 1 сек</div>
+                <div>pv2_current - Ток pv2 (А) за 1 сек</div>
+                <div>grid_voltage - Напряжение сети (В) за 1 сек</div>
+                <div>grid_current - Ток сети (А) за 1 сек</div>
+                <div>grid_frequency - Частота сети (Гц) за 1 сек</div>
+                <div>output_power - Выходная мощность (Вт) за 1 сек</div>
+                <div>energy_today - Энергия сегодня (кВт*ч) за 1 сек</div>
+                <div>energy_total - Общая энергия (кВт*ч) за 1 сек</div>
+            </div>
         </form>
         <br>
         <p>
             <a class="btn btn-outline-secondary" href="{% url 'invertor-data' %}"role="button">Вернуться </a>
         </p>
-        <img src="{% static 'media/1.jpeg' %}" alt="my_image">
+        {% if graph %}
+          {% load static %}
+          <img src="{% static 'meteo_app/graph.png' %}" alt="my_image" />
+        {% endif %}
     </div>
 </div>
 {% endblock %}
