--- a/weather_project/meteo_app/templates/meteo_app/meteo_graph.html
+++ b/weather_project/meteo_app/templates/meteo_app/meteo_graph.html
@@ -6,6 +6,9 @@
 <div class="container">
     <div class="col-12">
         <form class="row g-3" action="{% url 'meteo-data-graph' %}" method="get">
+            <br>
+            <div id="dateInlineHelp" class="form-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
+            <div id="paramInlineHelp" class="form-text">Введите параметр из таблицы</div>
             <div class="col-auto">
               <input type="text" class="form-control" placeholder="Дата с:"name="date_from">
             </div>
@@ -26,8 +29,25 @@
             <div class="col-auto">
               <button type="submit" class="btn btn-outline-secondary mb-3">Построить график</button>
             </div>
-            <div id="dateInlineHelp" class="form-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
-            <div id="paramInlineHelp" class="form-text">Введите параметр из таблицы</div>
+            <div id="meteoInlineHelp" class="form-text col-auto text-nowrap bg-light border" style="width: 55rem;">
+                <div>Вы можете построить графики по следующим параметрам:</div>
+                <div>TA - среднее значение температуры за 1 минуту  (°C)</div>
+                <div>DP - точка росы  (°C)</div>
+                <div>WC - охлаждение ветром (°C)</div>
+                <div>RH - относительная влажность (%)</div>
+                <div>PA - атмосферное давление (mm Hg)</div>
+                <div>PR - Количество жидких осадков мгновенное значение (мм)</div>
+                <div>PR1H - Количество жидких осадков сумма за 1 час (мм)</div>
+                <div>PR24h - Количество жидких осадков сумма за сутки (мм)</div>
+                <div>SR_1M - Данные от CMP6 установленного параллельно относительно поверхности земли (Вт/м²) среднее значение за 1 минуту</div>
+                <div>SR_1D - Данные от CMP6 установленного параллельно относительно поверхности земли (Вт/м²) среднее значение за 24 часа</div>
+                <div>SR_45_1M - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) среднее значение за 1 минуту</div>
+                <div>SR_45_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) среднее значение за 24 часа</div>
+                <div>SD_1H - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 1 час</div>
+                <div>SD_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 24 часа</div>
+                <div>SD_45_1H - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 1 час</div>
+                <div>SD_45_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 24 часа</div>
+            </div>
         </form>
         <br>
         <p>
