--- a/weather_project/meteo_app/templates/meteo_app/invertor.html
+++ b/weather_project/meteo_app/templates/meteo_app/invertor.html
@@ -43,7 +43,7 @@
                             {% endif %}
                     </ul>
                   </nav>
-                <table class="table table-hover table-bordered table-condensed">
+                <table class="table table-hover table-success table-bordered table-condensed">
                     <tbody>
                       <tr>
                         <th scope="col">id</th>
