--- a/weather_project/meteo_app/templates/meteo_app/meteo.html
+++ b/weather_project/meteo_app/templates/meteo_app/meteo.html
@@ -43,7 +43,7 @@
                             {% endif %}
                     </ul>
                 </nav>
-                <table class="table table-hover table-bordered">
+                <table class="table table-hover table-success table-bordered">
                     <tbody>
                       <tr>
                         <th scope="col">id</th>
